--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -834,6 +834,7 @@
 			Prone50Percent: 50
 			Prone60Percent: 60
 			Prone70Percent: 70
+			Prone80Percent: 80
 			Prone100Percent: 100
 			Prone350Percent: 350
 		DamageTriggers: TriggerProne
@@ -870,6 +871,7 @@
 			Prone50Percent: 50
 			Prone60Percent: 60
 			Prone70Percent: 70
+			Prone80Percent: 80
 			Prone100Percent: 100
 			Prone350Percent: 350
 		ProneOffset: 300,0,0
