特殊资源系统与ChemicalMissile逻辑（超武消耗特殊资源）

--- a/mods/ts/rules/player.yaml
+++ b/mods/ts/rules/player.yaml
@@ -6,6 +6,9 @@
 			Tiberium: 30
 			BlueTiberium: 60
 			Veins: 0
+		SpecialResourceValues:
+			Veins:
+				Chemicals: 1
 
 EditorPlayer:
 	Inherits: ^BasePlayer
