--- a/mods/ts/rules/nod-structures.yaml
+++ b/mods/ts/rules/nod-structures.yaml
@@ -520,10 +520,11 @@ NAMISL:
 		Amount: -50
 	ProvidesPrerequisite@buildingname:
 	SupportPowerChargeBar:
-	NukePower:
+	NukePower@ClusterMissile:
 		PauseOnCondition: empdisable || disabled
 		Cursor: nuke
 		Icon: clustermissile
+		OrderName: ClusterMissileAttack
 		ChargeInterval: 13500
 		Name: Cluster Missile
 		Description: Launches an explosive cluster warhead\nat a target location.
@@ -584,7 +585,9 @@ NAWAST:
 	TiberianSunRefinery:
 		DockAngle: 640
 		DockOffset: 2,1
-	StoresResources:
+		DiscardExcessResources: true
+	StoresSpecialResources:
+		Type: Chemicals
 		Capacity: 56
 	Power:
 		Amount: -40
@@ -604,6 +607,7 @@ NAWAST:
 		Sequence: bib
 	ProvidesPrerequisite@buildingname:
 	WithResourceStoragePipsDecoration:
+		ResourceType: Chemicals
 		Position: BottomLeft
 		RequiresSelection: true
 		Margin: 8, 2
@@ -612,3 +616,34 @@ NAWAST:
 		PipStride: 4, 2
 		PipCount: 15
 		Palette: pips
+	NukePower@ChemicalMissile:
+		PauseOnCondition: empdisable || disabled
+		Cursor: nuke
+		OrderName: ChemicalMissileAttack
+		Icon: chemicalmissile
+		ChargeInterval: 25
+		SpecialResourcesUsing:
+			Chemicals: 10
+		Name: Chemical Missile
+		Description: Launches an explosive Chemical missile\nat a target location.
+		EndChargeSpeechNotification: ChemicalMissileReady
+		SelectTargetSpeechNotification: SelectTarget
+		IncomingSpeechNotification: MissileLaunchDetected
+		EndChargeTextNotification: Chemical missile ready.
+		SelectTargetTextNotification: Select target.
+		IncomingTextNotification: Missile launch detected.
+		LaunchSound: icbm1.aud
+		MissileWeapon: ChemicalMissile
+		MissileImage: ClusterMissile
+		MissileDelay: 8
+		DetonationAltitude: 5c0
+		SpawnOffset: 0, 0c128, 0c512
+		DisplayTimerRelationships: None
+		DisplayBeacon: False
+		DisplayRadarPing: True
+		BeaconPoster:
+		CameraRange: 10c0
+		FlightVelocity: 1c0
+		TrailImage: small_smoke_trail
+		TrailInterval: 0
+		TrailSequences: idle
