优化地形渲染

--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -527,7 +527,7 @@
 	-ExternalCondition@CLOAKGENERATOR:
 	-ExternalCondition@CRATE-CLOAK:
 	SpawnActorsOnDeath@building:
-		ActorTypes: mutant, mutant, MWMN, mutant, civ1, ctech
+		ActorTypes: mutant, mutant, mwmn, mutant, civ1, ctech
 		SpawnCountCalculateAsValue: false
 		Probability: 20
 
