--- a/mods/ts/weapons/ballisticweapons.yaml
+++ b/mods/ts/weapons/ballisticweapons.yaml
@@ -61,6 +61,9 @@
 	Warhead@4Smu: LeaveSmudge
 		SmudgeType: MediumCrater
 		InvalidTargets: Vehicle, Building, Wall
+	Warhead@5Res: DestroyResource
+		ResourceAmount: 1
+		ResourceTypes: Tiberium, BlueTiberium
 
 90mm:
 	Inherits: ^Cannon
@@ -79,6 +82,8 @@
 		Inaccuracy: 340
 	Warhead@1Dam: SpreadDamage
 		Damage: 9000
+	Warhead@5Res: DestroyResource
+		ResourceAmount: 2
 
 120mmx:
 	Inherits: ^Cannon
@@ -122,6 +127,8 @@ RPGTower:
 		DamageTypes: Prone100Percent, TriggerProne, SmallExplosionDeath
 	Warhead@2Eff: CreateEffect
 		Explosions: large_clsn
+	Warhead@5Res: DestroyResource
+		ResourceAmount: 3
 
 ^ArtilleryWeapon:
 	Inherits: ^Cannon
@@ -133,7 +140,7 @@ RPGTower:
 		ContrailWidth: 175
 		LaunchAngle: 75
 	Warhead@1Dam: SpreadDamage
-		Spread: 216
+		Spread: 255
 		Versus:
 			None: 100
 			Wood: 85
@@ -175,6 +182,9 @@ RPGTower:
 		ImpactSounds: expnew06.aud
 	Warhead@4Smu: LeaveSmudge
 		SmudgeType: LargeCrater
+	Warhead@5Res: DestroyResource
+		Size: 1
+		ResourceAmount: 3
 
 155mmDeployCheck:
 	Inherits: ^ArtilleryDeployCheck
@@ -231,9 +241,10 @@ Grenade:
 		ContrailEndColorAlpha: 10
 		ContrailEndColorAlphaOuter: 5
 	Warhead@1Dam: SpreadDamage
-		Spread: 154
+		Spread: 215
 		Damage: 5500
 		Versus:
+			None: 100
 			Light: 70
 			Concrete: 28
 		DamageTypes: Prone70Percent, TriggerProne, ExplosionDeath
@@ -242,3 +253,4 @@ Grenade:
 		Explosions: small_grey_explosion
 		ImpactSounds: expnew13.aud
 		ValidTargets: Ground, Trees, Air
+	-Warhead@5Res:
