--- a/mods/ts/weapons/explosions.yaml
+++ b/mods/ts/weapons/explosions.yaml
@@ -66,6 +66,7 @@ TiberiumExplosion:
 	Warhead@Res: CreateResource
 		AddsResourceType: Tiberium
 		Size: 1,0
+		Density: 2, 5
 	Warhead@2Eff: CreateEffect
 		Explosions: large_explosion
 	-Warhead@4Smu:
@@ -82,6 +83,7 @@ TiberiumDeath:
 	Warhead@4Res: CreateResource
 		AddsResourceType: Tiberium
 		Size: 0,0
+		Density: 1, 4
 
 Demolish:
 	Warhead@1Dam: SpreadDamage
