--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -134,13 +134,13 @@ RUTEST2:
 	# 	FacingTolerance: 512
 	# 	Turret: turret2
 	# AttachedArmament@3:
-	# 	Weapon: HarpyClawMG
+	# 	Weapon: HarpyClaw
 	# 	SkeletonToUse: turret_skeleton2
 	# 	FromBonePose: firepose
 	# 	FacingTolerance: 40
 	# 	Turret: turret2
 	Armament:
-		Weapon: HarpyClawMG
+		Weapon: HarpyClaw
 		Turret: primary
 		LocalOffset: 1024,0,1024
 	BlendTreeHandler:
