--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -1,11 +1,233 @@
+^SA:
+	ValidTargets: Ground, Water, Air
+	ReloadDelay: 3
+	MinRange: 0c128
+	Range: 50c0
+	Report: infgun_a.wav, infgun_b.wav, infgun_c.wav, infgun_d.wav
+	BurstDelays: 1
+	Projectile: Bullet
+		DetectTargetFromLength: 0.7
+		DetectTargetBeforeDist: 2c0
+		ContrailZOffset: 22
+		ContrailLength: 3
+		ContrailWidth: 50
+		ContrailUseInnerOuterColor: true
+
+		ContrailStartColor: FFFF88
+		ContrailStartColorOuter: FFFF88
+		ContrailEndColor: BBBBBB
+		ContrailEndColorOuter: BBBBBB
+		ContrailStartColorAlpha: 255
+		ContrailStartColorAlphaOuter: 64
+		ContrailEndColorAlpha: 15
+		ContrailEndColorAlphaOuter: 0
+
+		ContrailWidthFadeRate: 0.75
+		ContrailDelay: 0
+		#ContrailBlendMode: ScreenAdditive
+		Speed: 1000
+		LaunchAngle: 0
+		ZOffset: 1024
+		Inaccuracy: 450
+		UseVerticalInaccuracy: true
+		OnlyHitToExplode: true
+		ExplodeUnderThisAltitude: -418
+		Blockable: false
+	Warhead@1Dam: Spread3DDamage
+		Damage: 900
+		DamageOne: true
+		OnlyDamageBlockerWhenBlocked: true
+		OnlyDamageDirectlyHit: true
+		Spread: 0c76
+		Falloff: 100, 70, 30
+		Versus:
+			None: 100
+			Wood: 60
+			Light: 40
+			Heavy: 15
+			Concrete: 10
+		DamageTypes: Prone70Percent, TriggerProne, BulletDeath
+		ValidTargets: Ground, Water, Air
+		InvalidTargets: Wall, Bridge
+	Warhead@2Eff: CreateEffect
+		Explosions: piff
+		ValidTargets: Ground, Air, Trees
+	Warhead@3EffWater: CreateEffect
+		Explosions: water_piff
+		ExplosionPalette: ra
+		ValidTargets: Water
+		InvalidTargets: Vehicle
+
+
 ^MG:
-	ReloadDelay: 20
-	Range: 4c0
-	Projectile: InstantHit
-	Warhead@1Dam: SpreadDamage
-		Spread: 108
-		Falloff: 100, 50, 25, 12, 6, 3, 0
-		Damage: 1500
+	Inherits: ^SA
+	MinRange: 0c128
+	Range: 6c128
+	ReloadDelay: 30
+	Burst: 4
+	BurstDelays: 3
+	Report: infgun_a.wav, infgun_b.wav, infgun_c.wav, infgun_d.wav
+	ValidTargets: Ground, Water
+	Projectile: Bullet
+		LifeTime: 10
+		ContrailLength: 2
+		Inaccuracy: 230
+		Blockable: true
+		Speed: 989
+	Warhead@1Dam: Spread3DDamage
+		Damage: 900
+		Spread: 0c42
+		Versus:
+			None: 100
+			Wood: 15
+			Light: 30
+			Heavy: 2
+			Concrete: 2
+
+# light infantry's automatic rifle
+AR:
+	Inherits: ^MG
+
+# elite light infantry's automatic rifle
+AR-Enhanced:
+	Inherits: ^MG
+	ReloadDelay: 18
+	Burst: 3
+	BurstDelays: 2
+	Projectile: Bullet
+		LifeTime: 11
+		Inaccuracy: 110
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1100
+
+# mutant's SMG
+SMG:
+	Inherits: ^MG
+	Range: 5c512
+	ReloadDelay: 30
+	MinRange: 0
+	Burst: 8
+	BurstDelays: 3
+	Report: gostgun_a.wav, gostgun_b.wav
+	Projectile: Bullet
+		LifeTime: 8
+		Inaccuracy: 450
+	Warhead@1Dam: Spread3DDamage
+		Damage: 750
+		Spread: 0c42
+		Versus:
+			None: 100
+			Wood: 15
+			Light: 25
+			Heavy: 1
+			Concrete: 1
+
+# mutant sergeant's SMG with EMPulse Ammo
+SergeantSMG:
+	Inherits: SMG
+	Burst: 8
+	Report: slvkgun_a.wav, slvkgun_b.wav
+	Range: 6c128
+	ReloadDelay: 22
+	Projectile: Bullet
+		LifeTime: 11
+		ContrailStartColor: 77B0FF
+		ContrailEndColor: FFFFFF
+		Inaccuracy: 375
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1250
+		Spread: 0c42
+		Condition: empdisable
+		Duration: 10
+		Versus:
+			None: 100
+			Wood: 15
+			Light: 50
+			Heavy: 15
+			Concrete: 15
+	Warhead@2Eff: CreateEffect
+		ExplosionPalette: effectblue
+		Explosions: piff-bright
+
+
+^Vulcan:
+	Inherits: ^MG
+	Range: 6c768
+	Report: tsgun4.aud
+	BurstDelays: 2
+	Burst: 12
+	Range: 6c512
+	ReloadDelay: 25
+	Projectile: Bullet
+		LifeTime: 10
+		Inaccuracy: 400
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1200
+		Spread: 0c42
+		Versus:
+			None: 100
+			Wood: 25
+			Light: 35
+			Heavy: 8
+			Concrete: 8
+
+# Wolverine vulcan
+AssaultVulcan:
+	Inherits: ^Vulcan
+
+# Buggy machine gun
+RaiderMG:
+	Inherits: ^Vulcan
+	Burst: 8
+	BurstDelays: 2
+	ReloadDelay: 30
+	MinRange: 0
+	Range: 6c512
+	Report: chaingn_a.wav, chaingn_b.wav, chaingn_c.wav, chaingn_d.wav
+	Projectile: Bullet
+		Inaccuracy: 330
+
+# cyborg gun
+CyborgVulcan:
+	Inherits: ^Vulcan
+	Range: 6c768
+	ReloadDelay: 3
+	Burst: 1
+	Report: cygun_a.wav, cygun_b.wav
+	Projectile: Bullet
+		LifeTime: 10
+		Inaccuracy: 340
+
+# gdi vulcan tower
+VulcanTower:
+	Inherits: ^Vulcan
+	Report: chaingn_a.wav, chaingn_b.wav, chaingn_c.wav, chaingn_d.wav
+	Range: 7c0
+	ReloadDelay: 45
+	Burst: 16
+	BurstDelays: 2
+	Projectile: Bullet
+		LifeTime: 11
+		Inaccuracy: 410
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1000
+		Spread: 0c72
+
+# gdi jumpjet infantry gun
+JumpVulcan:
+	Inherits: AssaultVulcan
+	Report: jumpjet1.aud
+	Range: 7c0
+	ReloadDelay: 40
+	Burst: 10
+	BurstDelays: 2
+	ValidTargets: Ground, Water, Air
+	Projectile: Bullet
+		LifeTime: 11
+		Inaccuracy: 410
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1200
+		Spread: 0c117
 		Versus:
 			None: 100
 			Wood: 60
@@ -13,102 +235,304 @@
 			Heavy: 25
 			Concrete: 10
 		DamageTypes: Prone70Percent, TriggerProne, BulletDeath
-	Warhead@2Eff: CreateEffect
-		Explosions: piffs
-		ValidTargets: Ground, Air
-	Warhead@3EffWater: CreateEffect
-		Explosions: water_piffs
-		ExplosionPalette: ra
-		ValidTargets: Water
-		InvalidTargets: Vehicle
 
-Minigun:
-	Inherits: ^MG
-	ReloadDelay: 21
-	Report: infgun3.aud, gostgun1.aud, slvkgun1.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 800
-		Versus:
-			Wood: 50
-
-M1Carbine:
-	Inherits: ^MG
-	Report: infgun3.aud
-
-Vulcan:
-	Inherits: ^MG
-	Report: chaingn1.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 2000
-
-Vulcan2:
-	Inherits: ^MG
-	ReloadDelay: 50
-	Burst: 3
-	Range: 6c0
-	Report: tsgun4.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 5000
-
-Vulcan3:
-	Inherits: ^MG
-	ReloadDelay: 30
-	Burst: 3
-	Report: cygun1.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 1000
-
-VulcanTower:
-	Inherits: ^MG
-	ReloadDelay: 26
-	Range: 6c0
-	Report: chaingn1.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 1800
-
-JumpCannon:
-	Inherits: ^MG
-	ReloadDelay: 40
-	Burst: 2
-	Range: 5c0
-	Report: jumpjet1.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 1500
-
-AssaultCannon:
-	Inherits: ^MG
-	ReloadDelay: 50
-	Range: 5c0
-	Report: tsgun4.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 4000
-
-RaiderCannon:
-	Inherits: ^MG
-	ReloadDelay: 55
-	Range: 4c0
-	Report: chaingn1.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 4000
-
+# harpy machine gun
 HarpyClaw:
-	Inherits: ^MG
-	ReloadDelay: 36
-	Range: 5c0
-	Report: cygun1.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 6000
-
-Pistola:
-	Inherits: ^MG
-	Range: 3c0
-	Report: gun18.aud
-	Warhead@1Dam: SpreadDamage
-		Damage: 200
+	Inherits: ^Vulcan
+	Burst: 20
+	BurstDelays: 2
+	MinRange: 0
+	Range: 7c768
+	ReloadDelay: 35
+	Report: cygun_a.wav, cygun_b.wav #slvkgun_a.wav, slvkgun_b.wav
+	ValidTargets: Ground, Water, Air
+	Projectile: Bullet
+		LifeTime: 12
+		ContrailStartColor: A0FFA0C0
+		Inaccuracy: 290
+		Speed: 1000
+		OnlyDamageDirectlyHit: false
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1250
+		Spread: 0c128
+		DamageTypes:  Prone100Percent, TriggerProne, SmallExplosionDeath
 	Warhead@2Eff: CreateEffect
-		Explosions: piff
-	Warhead@3EffWater: CreateEffect
-		Explosions: water_piff
+		ExplosionPalette: effectgreen
+
+# Mammoth Mk. II machine gun with EMPulse ammo
+MechPulseGun:
+	Inherits: ^Vulcan
+	Burst: 10
+	Report: silencer.aud
+	Range: 9c512
+	ReloadDelay: 25
+	Projectile: Bullet
+		LifeTime: 11
+		ContrailLength: 3
+		ContrailStartColor: 77CFFFFF
+		Inaccuracy: 375
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1500
+		Spread: 0c42
+		Condition: empdisable
+		Duration: 10
+		Versus:
+			None: 100
+			Wood: 15
+			Light: 50
+			Heavy: 15
+			Concrete: 15
+	Warhead@2Eff: CreateEffect
+		ExplosionPalette: effectcyan
+
+
+
+Sniper:
+	Inherits: ^MG
+	MinRange: 0c128
+	Range: 11c0
+	ReloadDelay: 50
+	Burst: 1
+	Report: silencer.aud
+	Projectile: Bullet
+		LifeTime: 13
+		ContrailLength: 3
+		Inaccuracy: -1
+		Blockable: true
+		Speed: 1120
+	Warhead@1Dam: Spread3DDamage
+		Spread: 36
+		Damage: 12550
+		Versus:
+			Wood: 5
+			Light: 15
+			Heavy: 5
+			Concrete: 5
+		DamageTypes: Prone70Percent, TriggerProne, BulletDeath
+
+
+SilencerSniper:
+	Inherits: Sniper
+	Range: 10c0
+
+Pistol:
+	Inherits: ^MG
+	MinRange: 0
+	Range: 5c128
+	ReloadDelay: 12
+	Burst: 1
+	Report: gun18.aud
+	Projectile: Bullet
+		LifeTime: 6
+		ContrailLength: 2
+		Inaccuracy: 330
+		Blockable: true
+		Speed: 1120
+	Warhead@1Dam: Spread3DDamage
+		Damage: 900
+		Versus:
+			None: 100
+			Wood: 5
+			Light: 15
+			Heavy: 1
+			Concrete: 1
+
+# Slavick's rifle
+SlavickGun:
+	Inherits: ^MG
+	Burst: 3
+	Report: slvkgun_a.wav, slvkgun_b.wav
+	Range: 7c256
+	ReloadDelay: 30
+	Projectile: Bullet
+		LifeTime: 12
+		ContrailWidth: 66
+		ContrailUseInnerOuterColor: true
+		ContrailStartColor: FF3030
+		ContrailStartColorOuter: DF5050
+		ContrailStartColorAlpha: 255
+		ContrailStartColorAlphaOuter: 64
+		ContrailEndColor: FF3030
+		ContrailEndColorOuter: DF5050
+		ContrailEndColorAlpha: 15
+		ContrailEndColorAlphaOuter: 0
+		Inaccuracy: 90
+		Speed: 1000
+		OnlyDamageDirectlyHit: false
+	Warhead@1Dam: Spread3DDamage
+		Damage: 5500
+		Spread: 0c128
+		Versus:
+			None: 150
+			Wood: 75
+			Light: 25
+			Heavy: 15
+			Concrete: 15
+		DamageTypes:  Prone100Percent, TriggerProne, FireDeath
+	Warhead@2Eff: CreateEffect
+		Explosions: piff-bright
+		ExplosionPalette: effectred
+
+# Oxanna's heavy calibre hand gun
+OxannaGun:
+	Inherits: Pistol
+	Range: 6c512
+	ReloadDelay: 9
+	Projectile: Bullet
+		LifeTime: 12
+		ContrailLength: 3
+		ContrailWidth: 88
+		ContrailUseInnerOuterColor: true
+		ContrailStartColor: FFFE30
+		ContrailStartColorOuter: FFFE30
+		ContrailStartColorAlpha: 255
+		ContrailStartColorAlphaOuter: 32
+		ContrailEndColor: FFFE30
+		ContrailEndColorOuter: FFFE30
+		ContrailEndColorAlpha: 0
+		ContrailEndColorAlphaOuter: 15
+		Inaccuracy: 90
+		Speed: 1000
+		OnlyDamageDirectlyHit: false
+	Warhead@1Dam: Spread3DDamage
+		Damage: 8000
+		Spread: 0c128
+		Versus:
+			None: 100
+			Wood: 30
+			Light: 30
+			Heavy: 20
+			Concrete: 15
+		DamageTypes:  Prone100Percent, TriggerProne, SmallExplosionDeath
+	Warhead@2Eff: CreateEffect
+		Explosions: piff-bright
+
+
+^ShotGun:
+	ReloadDelay: 22
+	Range: 5c535
+	Burst: 1
+	Report: gun18.aud
+	Projectile: InstantScat
+		ScatWeapon: ^ShotGunScat
+		ScatCount: 10
+		Inaccuracy: 200
+	Warhead@1Dam: SpreadDamage
+
+ShardShotGun:
+	Inherits: ^ShotGun
+	Projectile: InstantScat
+		ScatWeapon: TinyShard
+		ScatCount: 8
+
+^ShotGunScat:
+	Inherits: ^MG
+	Projectile: Bullet
+		LifeTime: 7
+		Inaccuracy: 700
+		ContrailLength: 2
+	Warhead@1Dam: Spread3DDamage
+		Damage: 700
+		Spread: 0c128
+		Versus:
+			None: 100
+			Wood: 20
+			Light: 15
+			Heavy: 1
+			Concrete: 1
+		ValidTargets: Ground, Water, Air
+
+TinyShard:
+	Inherits: ^ShotGunScat
+	Projectile: Bullet
+		LifeTime: 7
+		ContrailLength: 2
+		ContrailStartColor: 10FFA0
+		ContrailEndColor: 008800
+		Inaccuracy: 990
+		Speed: 800
+	Warhead@1Dam: Spread3DDamage
+		Damage: 1000
+		Spread: 0c42
+		Versus:
+			None: 100
+			Wood: 33
+			Light: 55
+			Heavy: 33
+			Concrete: 10
+		DamageTypes:  Prone100Percent, TriggerProne, SmallExplosionDeath, TriggerVisceroid
+	Warhead@2Eff: CreateEffect
+		ExplosionPalette: effectdarkgreen
+
+
+
+
+# Vulcan:
+# 	Inherits: ^MG
+# 	Report: chaingn1.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 2000
+
+# Vulcan2:
+# 	Inherits: ^MG
+# 	ReloadDelay: 50
+# 	Burst: 3
+# 	Range: 6c0
+# 	Report: tsgun4.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 5000
+
+# Vulcan3:
+# 	Inherits: ^MG
+# 	ReloadDelay: 30
+# 	Burst: 3
+# 	Report: cygun1.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 1000
+
+# VulcanTower:
+# 	Inherits: ^MG
+# 	ReloadDelay: 26
+# 	Range: 6c0
+# 	Report: chaingn1.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 1800
+
+# JumpCannon:
+# 	Inherits: ^MG
+# 	ReloadDelay: 40
+# 	Burst: 2
+# 	Range: 5c0
+# 	Report: jumpjet1.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 1500
+
+# AssaultCannon:
+# 	Inherits: ^MG
+# 	ReloadDelay: 50
+# 	Range: 5c0
+# 	Report: tsgun4.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 4000
+
+# RaiderCannon:
+# 	Inherits: ^MG
+# 	ReloadDelay: 55
+# 	Range: 4c0
+# 	Report: chaingn1.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 4000
+
+# Pistola:
+# 	Inherits: ^MG
+# 	Range: 3c0
+# 	Report: gun18.aud
+# 	Warhead@1Dam: SpreadDamage
+# 		Damage: 200
+# 	Warhead@2Eff: CreateEffect
+# 		Explosions: piff
+# 	Warhead@3EffWater: CreateEffect
+# 		Explosions: water_piff
 
 # Sniper:
 # 	Inherits: ^MG
@@ -128,3 +552,39 @@ Pistola:
 # 		Explosions: piff
 # 	Warhead@3EffWater: CreateEffect
 # 		Explosions: water_piff
+
+
+DropVulcan:
+	Inherits: ^SA
+	Projectile: Bullet
+		Speed: 2c0
+		ContrailWidthFadeRate: 1
+
+
+A10Vulcan:
+	Inherits: ^SA
+	ValidTargets: Ground, Water
+	ReloadDelay: 100
+	MinRange: 4c512
+	Burst: 60
+	BurstDelays: 1
+	Range: 10c0
+	Report: cygun_a.wav, cygun_b.wav
+	FirstBurstTargetOffset: -3000,0,0
+	FollowingBurstTargetOffset: 150,0,0
+	Projectile: Bullet
+		Speed: 1100
+		LaunchAngle: 0
+		Inaccuracy: 1c0
+	Warhead@1Dam: Spread3DDamage
+		Damage: 2500
+		Falloff: 100, 100, 30
+		Spread: 0c268
+		DamageOne: false
+		OnlyDamageDirectlyHit: false
+		Versus:
+			None: 100
+			Wood: 60
+			Light: 50
+			Heavy: 30
+			Concrete: 10
