--- a/mods/ts/bits/terrain/tile-set.yaml
+++ b/mods/ts/bits/terrain/tile-set.yaml
@@ -1,9 +1,13 @@
-cliff01: TileCliff1.png
-conc01: TileConc1.png
-dirt01: TileDirt1.png
-dirt02: TileDirt2.png
-grass01: TileGrass1.png
+base: dirt.png 
+water01: Water01.png    #1 water
+sand01: TileSand1.png   #2 sand
+conc01: TileConc1.png   #3 road
+grass01: TileGrass1.png #4 grass
+cliff01: TileCliff1.png #5 cliff
+dirt02: TileDirt2.png   #6 dirt road
+dirt01: TileDirt1.png   #7 rough
+clear: dirt.png         #8 clear
+base2: dirt.png 
 grass02: TileGrass2.png
 grass03: TileGrass3.png
-sand01: TileSand1.png
-final: dirt.png
+
