--- a/mods/ts/weapons/superweapons.yaml
+++ b/mods/ts/weapons/superweapons.yaml
@@ -235,6 +235,7 @@ EMPulseCannon:
 	Warhead@1Eff: CreateEffect
 		Explosions: pulse_explosion
 		ImpactActors: false
+		ValidTargets: Ground, Water, Air, Underground
 	Warhead@emp: GrantExternalCondition
 		Range: 6c0
 		Duration: 250
