--- a/mods/ts/terrain/snow/snow-tileset.yaml
+++ b/mods/ts/terrain/snow/snow-tileset.yaml
@@ -1,23 +1,24 @@
-base: Snow03.png
+base: Snow03
 	Scale: 2.2
-water01: SnowWater01.png  # water
-	Scale: 4
-shore01: Snow02.png       # shore
+water01: SnowWater01  # 0 water
+	Scale: 5
+shore01: Snow02       # 1 shore
 	Scale: 1.7
-conc01: SnowConc01.png    # conc
+conc01: SnowConc01    # 2 conc
 	Scale: 2
-grass01: SnowGrass01.png  # grass
+grass01: SnowGrass01  # 3 grass
 	Scale: 2
-cliff01: SnowCliff01.png  # cliff
+cliff01: SnowCliff01  # 4 cliff
 	Scale: 5.5
-dirt02: Snow04.png        # dirt road
+dirt02: Snow04        # 5 dirt road
 	Scale: 2
-dirt01: SnowGrass02.png   # rough
+dirt01: SnowGrass02   # 6 rough
 	Scale: 3
-clear: Snow01.png         # clear
+crack: SnowCrack01    # 7 crack
 	Scale: 3
-base2: Snow01.png
-base3: Snow01.png
+clear: Snow01         # 8 clear
+	Scale: 3
+
 
 
 
