修改轨道炮逻辑，修改地形shader diffuse亮度

--- a/mods/ts/weapons/energyweapons.yaml
+++ b/mods/ts/weapons/energyweapons.yaml
@@ -4,6 +4,7 @@
 	Report: bigggun1.aud
 	Projectile: Railgun
 		Duration: 15
+		Speed: 1424
 		Blockable: true
 		DamageActorsInLine: true
 		LineWeapon: ^RailgunLineDamage
