--- a/mods/ts/weapons/energyweapons.yaml
+++ b/mods/ts/weapons/energyweapons.yaml
@@ -4,16 +4,18 @@
 	Report: bigggun1.aud
 	Projectile: Railgun
 		Duration: 15
-		Speed: 1424
+		Speed: 1668
+		Width: 256
+		StartDamageLineTick: 0
 		Blockable: true
 		DamageActorsInLine: true
 		LineWeapon: ^RailgunLineDamage
 		BeamColor: 0080FFC8
 		HelixColor: 0080FFC8
 		BeamBlendMode: Additive #ScreenAdditive
-	Warhead@1Dam: SpreadDamage
-		Range: 0, 32
-		Falloff: 100, 100
+	Warhead@1Dam: Spread3DDamage
+		Speed: 0c128
+		Falloff: 100, 100, 20, 2, 1
 		Damage: 15000
 		AffectsParent: false
 		Versus:
@@ -23,6 +25,7 @@
 			Heavy: 110
 			Concrete: 5
 		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
+		ValidTargets: Ground, Water, Air
 	Warhead@2Eff: CreateEffect
 		Explosions: proton_explo
 		ExplosionPalette: effectcyan
@@ -42,33 +45,36 @@
 	Warhead@1Dam: SpreadDamage
 		Range: 0, 32
 		Falloff: 100, 100
+		ValidRelationships: Neutral, Enemy
 		Damage: 7500
 		AffectsParent: false
 		Versus:
-			None: 100
-			Wood: 130
+			None: 130
+			Wood: 100
 			Light: 150
 			Heavy: 110
+			Concrete: 5
+		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
+	Warhead@2Dam: SpreadDamage
+		Range: 0, 32
+		Falloff: 100, 100
+		ValidRelationships: Ally
+		Damage: 4500
+		AffectsParent: false
+		Versus:
+			None: 100
+			Wood: 50
+			Light: 100
+			Heavy: 100
 			Concrete: 5
 		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
 
 LtRail:
 	Inherits: ^Railgun
-	Warhead@1Dam: SpreadDamage
-		ValidRelationships: Neutral, Enemy
-	Warhead@2Dam: SpreadDamage
-		Range: 0, 32
-		Falloff: 50, 50 # Only does half damage to friendly units
-		Damage: 15000
-		AffectsParent: false
-		ValidRelationships: Ally
-		Versus:
-			None: 100
-			Wood: 130
-			Light: 150
-			Heavy: 110
-			Concrete: 5
-		DamageTypes: Prone100Percent, TriggerProne, ExplosionDeath
+	# InvalidTargets: Infantry
+	Warhead@1Dam: Spread3DDamage
+		Condition: empdisable
+		Duration: 30
 
 MechRailgun:
 	Inherits: ^Railgun
@@ -76,8 +82,10 @@ MechRailgun:
 	Report: railuse5.aud
 	Projectile: Railgun
 		BeamColor: 00FFFFC8
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		Damage: 20000
+		Condition: empdisable
+		Duration: 30
 		Versus:
 			None: 200
 			Wood: 175
@@ -147,32 +155,93 @@ SonicZap:
 		InvalidTargets: Vehicle, Building, Wall
 
 CyCannon:
+	Inherits: ^ShotGun
+	Range: 8c0
+	ReloadDelay: 50
+	ValidTargets: Ground, Water, Trees
+	Report: scrin5b.aud
+	Projectile: InstantScat
+		ScatWeapons: CyCannonProton, CyCannonProtonFlame, CyCannonProtonEmp
+		ScatCounts: 1,1,1
+		Inaccuracy: 0
+
+CyCannonProton:
 	Inherits: ^EnergyBlast
 	ValidTargets: Ground, Trees
 	Projectile: Missile
-		MaximumLaunchSpeed: 192
+		Inaccuracy: 300
+		MaximumLaunchSpeed: 150
 		Blockable: false
 		HorizontalRateOfTurn: 8
 		Shadow: false
 		Image: proton_projectile
-		MinimumLaunchSpeed: 75
+		MinimumLaunchSpeed: 145
 		Speed: 384
 		RangeLimit: 8c0
 		TerrainHeightAware: true
-	Warhead@1Dam: SpreadDamage
+	Warhead@1Dam: Spread3DDamage
 		ValidTargets: Ground, Trees
-		Spread: 0c128
-		Damage: 12000
+		Spread: 0c168
+		Damage: 12500
 		Versus:
-			None: 350
-			Wood: 260
+			None: 100
+			Wood: 150
 			Light: 205
 			Heavy: 150
-			Concrete: 80
+			Concrete: 50
 		DamageTypes: Prone350Percent, TriggerProne, EnergyDeath
 	Warhead@2Eff: CreateEffect
 		Explosions: proton_explo
 		ValidTargets: Ground, Water, Air, Trees
+
+CyCannonProtonFlame:
+	Inherits: CyCannonProton
+	Projectile: Missile
+		MaximumLaunchSpeed: 125
+		MinimumLaunchSpeed: 120
+		LaunchAngle: 32
+		Palette: effectred
+	Warhead@1Dam: Spread3DDamage
+		ValidTargets: Ground, Trees
+		Spread: 0c168
+		Damage: 8000
+		Versus:
+			None: 150
+			Wood: 250
+			Light: 100
+			Heavy: 100
+			Concrete: 80
+		DamageTypes: Prone100Percent, TriggerProne, FireDeath
+	Warhead@2Eff: CreateEffect
+		Explosions: proton_explo
+		ExplosionPalette: effectred
+	Warhead@burn: CreateEffect
+		Explosions: laserburningbig
+		ValidTargets: Ground
+		InvalidTargets: Vehicle, Building, Wall
+
+CyCannonProtonEmp:
+	Inherits: CyCannonProton
+	Projectile: Missile
+		MaximumLaunchSpeed: 100
+		MinimumLaunchSpeed: 95
+		LaunchAngle: 64
+		Palette: effectcyan
+	Warhead@1Dam: Spread3DDamage
+		Damage: 4500
+		Condition: empdisable
+		Duration: 30
+		Versus:
+			None: 100
+			Wood: 100
+			Light: 150
+			Heavy: 150
+			Concrete: 100
+		DamageTypes: Prone100Percent, TriggerProne, EnergyDeath
+	Warhead@2Eff: CreateEffect
+		Explosions: proton_explo
+		ExplosionPalette: effectcyan
+
 
 Proton:
 	Inherits: ^EnergyBlast
